<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.davidgarza.takehome.ui.searchuser.SearchUserFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_search_user">
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:popUpTo="@+id/a"
            app:popUpToInclusive="true">
            <argument
                android:name="repository"
                app:argType="com.davidgarza.takehome.data.remote.Repo" />
            <argument
                android:name="totalForks"
                app:argType="integer"
                android:defaultValue="0" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.davidgarza.takehome.ui.repodetails.DetailsFragment"
        android:label="@string/details_fragment_title"
        tools:layout="@layout/fragment_repo_details">
        <argument
            android:name="repository"
            app:argType="com.davidgarza.takehome.data.remote.Repo" />
        <argument
            android:name="totalForks"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>